--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="text1 text1-js">hi!</div>
                     <div class="text2 text2-js">i'm sumit</div>
                 </div>
-                <div class="profession profession-js"><div>artist, video editor, and developer(FY)</div></div>
+                <div class="profession profession-js"><div>artist, video editor, and developer(SY)</div></div>
                 <div class="icons icons-js">
                     <div class="about about-react res">
                             <img src="icon_about_dark.webp" class="image" loading="lazy" decoding="async">
